# todo

./: LICENSE  pyproject.toml
tests/: test_parser.py  test_utils.py
todo/: cli.py  manager.py  parser.py  rule.py  utils.py
