[tool.poetry]
name = "todo"
version = "0.1.0"
description = "Cli task manager"
authors = ["Tetraliane <57061591+tetraliane@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
